WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
21525
55 StructureID leaks on Wikitravel's main page
https://bugs.webkit.org/show_bug.cgi?id=21525
Summary
55 StructureID leaks on Wikitravel's main page
Cameron Zwarich (cpst)
Reported
2008-10-10 11:15:24 PDT
After loading and closing
http://wikitravel.org/en/Main_Page
I see 60 StructureIDs leaked, 5 of which are the ones allocated by JSGlobalData. I will post allocation backtraces for them.
Attachments
Stack traces of leaking allocations
(389.75 KB, text/plain)
2008-10-10 11:18 PDT
,
Cameron Zwarich (cpst)
no flags
Details
Somewhat evil fix
(3.82 KB, patch)
2008-10-11 01:18 PDT
,
Cameron Zwarich (cpst)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Cameron Zwarich (cpst)
Comment 1
2008-10-10 11:18:10 PDT
Created
attachment 24268
[details]
Stack traces of leaking allocations Lots of the things leaking are things that are likely to be extended by a JS framework, like StructureIDs created in ObjectPrototype and static function slots in ArrayPrototype. There are also a lot of generic puts on arrays that create leaking StructureIDs.
Cameron Zwarich (cpst)
Comment 2
2008-10-10 15:36:48 PDT
One particular leak has been spun off as
bug 21533
.
Cameron Zwarich (cpst)
Comment 3
2008-10-11 01:18:32 PDT
Created
attachment 24291
[details]
Somewhat evil fix This fixes the bug, as well as all other StructureID leaks I could find. It is a bit evil, because it is a default argument on a virtual method, and subclasses won't pass it back down to the base class implementation in JSObject. I will probably add an extra default bool argument to make sure people deal with it.
Cameron Zwarich (cpst)
Comment 4
2008-10-11 13:11:40 PDT
Comment on
attachment 24291
[details]
Somewhat evil fix Oops, that fix was meant for
bug 21533
, but I have a new one to post there.
Cameron Zwarich (cpst)
Comment 5
2008-10-11 13:59:44 PDT
This was fixed by
r37508
, the fix for
bug 21533
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug