JavaScriptCore/kjs/PropertyNameArray.h
@@ -65,12 +65,14 @@ namespace JSC {
         PropertyNameArray(JSGlobalData* globalData)
             : m_data(PropertyNameArrayData::create())
             , m_globalData(globalData)
+            , m_cacheable(true)
         {
         }
 
         PropertyNameArray(ExecState* exec)
             : m_data(PropertyNameArrayData::create())
             , m_globalData(&exec->globalData())
+            , m_cacheable(true)
         {
         }
 
@@ -93,12 +95,16 @@ namespace JSC {
 
         PassRefPtr<PropertyNameArrayData> releaseData() { return m_data.release(); }
 
+        void setCacheable(bool cacheable) { m_cacheable = cacheable; }
+        bool cacheable() const { return m_cacheable; }
+
     private:
         typedef HashSet<UString::Rep*, PtrHash<UString::Rep*> > IdentifierSet;
 
         RefPtr<PropertyNameArrayData> m_data;
         IdentifierSet m_set;
         JSGlobalData* m_globalData;
+        bool m_cacheable;
     };
 
 } // namespace JSC
